improve activity cache returning new collections for each request